app/style/app.css
body {
  margin: 0;
  font-size: 17px;
  font-family: "FiraSans";
  overflow-x: hidden;
  background-color: var(--background);
  color: var(--title-color);
}

body.loading {
  background: url(../img/gears.svg) 50% 50%;
}

gaia-header {
  --header-icon-color: var(--title-color);
}

gaia-header #upload-link {
  background: url(../img/upload.svg) no-repeat 50% 50% / 32px !important;
  filter: invert(55%);
}

#tabs-container {
  --border-color: transparent;
  border-bottom: 1px solid #e7e7e7 !important;
}

#tabs-container a {
  font-weight: normal !important;
}

.install-list {
  position: absolute !important;
  width: 100%;
}

.install-list > .item {
  height: 66px;
}

.install-list .icon {
  max-height: 100%;
  float: left;
  margin-right: 13px;
}

.install-list .name {
  margin: 0;
  font-size: 19px !important;
  color: var(--text-color);
}

.author {
  margin: 0 0 0 2px;
  font-size: 15px !important;
  color: var(--title-color);
}

.install-list {
  transition: transform 0.2s ease;
}

.install-list .install-button {
  font-size: 12px !important;
  font-weight: bold !important;
  height: 32px !important;
  min-width: 70px !important;
  padding: 0 !important;
  margin: 0 !important;
  --button-color: var(--title-color);
  -moz-user-select: none;
}

.install-list .addon.installed .install-button {
  display: none !important;
}

.install-list .item:not(.installed) .install-button {
  --button-background: var(--color-blue);
  --button-box-shadow: none;
  --button-color: white;
  --button-background-active: white;
  --button-box-shadow-active: none;
  --button-color-active: var(--title-color);
}

.install-list .install-info {
  font-size: 14px;
  font-style: italic;
  color: var(--title-color);
  display: none;
}

.install-list .addon.installed .install-info {
  display: inline;
}

#app-list {
  transform: translateX(-100%);
}

#addon-list {
  transform: translateX(100%);
}

#app-list.active,
#addon-list.active {
  transform: translateX(0);
}

#app-details {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  background-color: var(--background);
  color: var(--text-color);
  --header-icon-color: var(--text-color);
  transition: transform 0.2s ease;
  transform: translateY(100%);
}

#app-details.active {
  transform: translateY(0);
}

#app-details #info-section {
  position: relative !important;
}

#app-details #full-description,
#app-details #affected-apps {
  font-size: 15px;
  line-height: 20px;
  padding: 2px 16px;
}

